--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -102,7 +102,7 @@
 
             </div>
         </div>
-        {% if ceresConfig.pagination.position in ['bottom', 'top_bottom'] %}
+        {% if ceresConfig.pagination.position in ['top', 'top_bottom'] %}
             <div class="list-controls m-b-3 row">
                 <div class="col-xs-12">
                     <pagination template="#vue-pagination"></pagination>
