--- a/resources/views/ItemList/Components/CategoryItem.twig
+++ b/resources/views/ItemList/Components/CategoryItem.twig
@@ -61,7 +61,13 @@
                             ${ itemData.prices.default.unitPrice.formatted } *
                         </div>
                     </div>
+				<slot name="AfterPrice"></slot>
 
+				<span v-if="currentVariation.variation.availability" :class="'availability tag availability_' + currentVariation.variation.availability.id">
+					<span>
+						${ currentVariation.variation.availability.names.name }
+					</span>
+				</span>
                     <div class="category-unit-price" v-if="!(itemData.unit.unitOfMeasurement === 'C62' && itemData.unit.content === 1)">
                         <span>${ itemData.unit.content }</span>
                         <span>${ itemData.unit.names.name }</span>
